# elexon-data-ingest

./: README.md  pyproject.toml
elexon_data_ingest/: data_ingest.py  elexon_api.py  ingest_data.py  main.py
tests/: test_elexon_api.py
