[tool.poetry]
name = "elexon_data_ingest"
version = "0.1.0"
description = "Ingests data from elexon API"
authors = ["Stephen Nicholson <stephennicholson14@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.0"
pyarrow = "^14.0.2"
sqlalchemy = "^2.0.25"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
pytest = "^7.4.4"
black = "^23.12.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
